k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tusas-frontend
  namespace: tusas-vitrin
spec:
  selector:
    app: tusas-frontend
  ports:
    - port: 80
      targetPort: 80
